--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,25 @@ asgiref==3.5.0
 bcrypt==3.2.0
 cffi==1.15.0
 click==8.0.4
+cryptography==37.0.2
 distlib==0.3.4
+ecdsa==0.17.0
 fastapi==0.75.0
 fastapi-jwt-auth==0.5.0
 filelock==3.6.0
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
+jose==1.0.0
+passlib==1.7.4
 platformdirs==2.5.1
+pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.0
 PyJWT==1.7.1
 PyMySQL==1.0.2
+python-jose==3.3.0
+rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.32
